--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -19,6 +19,8 @@
    border-radius: 3px;
    box-shadow: 0 5px 5px rgba(#000, 0.2);
 
+   position: relative;
+
    @media only screen and (max-width: 62.5em) {
       box-shadow: none;
       min-height: 100vh;
@@ -92,7 +94,6 @@
       border: none;
       border-radius: 0.5rem;
       padding: 0.8rem 2.4rem;
-      background-color: var(--color-accent);
       color: #fff;
       cursor: pointer;
       transition: transform 0.2s, box-shadow 0.2s;
@@ -122,5 +123,37 @@
       color: var(--color-error);
       font-weight: 500;
       padding-left: 20px;
+   }
+   
+   &__logo {
+      display: inline-block;
+      font-size: 2rem;
+      font-weight: 600;
+      margin-left: 3rem;
+      color: var(--color-text);
+      /* position: relative; */
+      position: absolute;
+      top: 4rem;
+      right: 7rem;
+      
+      &::before,
+      &::after {
+         display: inline-block;
+         content: "";
+         background-color: currentColor;
+         position: absolute;
+         right: 0;
+         height: 1px;
+      }
+      
+      &::before {
+         width: 6rem;
+         top: 0;
+      }
+      
+      &::after {
+         width: 3rem;
+         top: 0.5rem;
+      }
    }
 }
