--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -5,6 +5,10 @@
    justify-content: center;
 
    background-color: var(--color-grey-dark);
+   
+   @media only screen and (max-width: 63.5em) {
+      background-color: #fff;
+   }
 }
 
 .login {
@@ -21,9 +25,8 @@
 
    position: relative;
 
-   @media only screen and (max-width: 62.5em) {
+   @media only screen and (max-width: 63.5em) {
       box-shadow: none;
-      min-height: 100vh;
       width: 100vw;
    }
 
@@ -31,12 +34,8 @@
       grid-template-columns: repeat(8, max-content);
       grid-template-rows: repeat(3, max-content);
       grid-gap: 2rem;
-      padding: 4rem 7rem;
-      box-shadow: 0 5px 5px rgba(#000, 0.2);
-   }
-
-   @media only screen and (max-width: 31.25em) {
-      box-shadow: none;
+      padding: 4rem;
+      min-height: 100%;
    }
 
    &__title {
@@ -89,13 +88,8 @@
 
    &__submit {
       justify-self: start;
-
       font-size: 1.7rem;
-      border: none;
-      border-radius: 0.5rem;
       padding: 0.8rem 2.4rem;
-      color: #fff;
-      cursor: pointer;
       transition: transform 0.2s, box-shadow 0.2s;
 
       &:hover {
@@ -131,10 +125,17 @@
       font-weight: 600;
       margin-left: 3rem;
       color: var(--color-text);
-      /* position: relative; */
       position: absolute;
       top: 4rem;
       right: 7rem;
+      
+      @media only screen and (max-width: 50em) {
+         top: 1rem;
+      }
+
+      @media only screen and (max-width: 31.25em) {
+         right: 2.5rem;
+      }
       
       &::before,
       &::after {
