--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -8,12 +8,19 @@
    align-items: center;
 
    border-bottom: 1px solid #fff;
+   
+   @media only screen and (max-width: 26.875em) {
+      border: none;
+   }
 
    &__list {
-      flex: 0 0 30%;
       align-self: stretch;
-   
       display: flex;
+
+      @media only screen and (max-width: 26.875em) {
+         // display: none;
+
+      }
    }
    
    &__item {
@@ -29,6 +36,16 @@
       &:hover {
          background-color: rgba(#fff, 0.2);
       }
+
+      @media only screen and (max-width: 26.875em) {
+         padding: 0 1rem;
+      }
+
+      & > *:last-child{
+         @media only screen and (max-width: 26.875em) {
+            display: none;
+         }
+      }
    }
    
    &__notification {
@@ -43,6 +60,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @media only screen and (max-width: 26.875em) {
+         top: 1rem;
+         right: 0rem;
+      }
    }
 
    &__logo {
