--- a/src/sass/popup.scss
+++ b/src/sass/popup.scss
@@ -1,19 +1,22 @@
 .popup {
+   position: fixed;
+   bottom: 1rem;
+   right: 1rem;
+   border-radius: 3px;
+   padding: 2rem;
+   background-color: #fff;
+   box-shadow: 0 5px 8px rgba(#000, 0.1);
+
    display: flex;
-   justify-content: flex-end;
-   position: relative;
-   margin-right: 2rem;
+   align-items: center;
    
    &__text {
-      background-color: #fff;
-      border-radius: 3px;
-      padding: 3rem;
+      margin-right: 1rem;
    }
 
    &__close-button {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
+      display: flex;
+      padding: 0;
       border: none;
       background: none;
    }
