--- a/src/sass/themeToggler.scss
+++ b/src/sass/themeToggler.scss
@@ -6,6 +6,14 @@
    bottom: 4rem;
    right: 7rem;
 
+   @media only screen and (max-width: 50em) {
+      bottom: 5rem;
+   }
+
+   @media only screen and (max-width: 31.25em) {
+      right: 2.5rem;
+   }
+
    font-weight: 400;
 
    &__button {
