--- a/src/sass/uploads.scss
+++ b/src/sass/uploads.scss
@@ -1,9 +1,20 @@
 .upload {
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(28.8rem, max-content));
-   grid-gap: 5rem;
+   grid-template-columns: repeat(auto-fit, minmax(20rem, max-content));
+   grid-gap: 4rem;
    justify-content: center;
-   padding: 5rem;
+   padding: 4rem;
+
+   @media only screen and (max-width: 31.25em) {
+      grid-gap: 3rem;
+      padding: 3rem;
+   }
+
+   @media only screen and (max-width: 26.875em) {
+      grid-template-columns: repeat(auto-fit, minmax(15rem, max-content));
+      grid-gap: 2.5rem;
+      padding: 2.5rem;
+   }
 
    &__recommendation {
       display: grid;
@@ -25,11 +36,9 @@
    &__button {
       display: flex;
       font-size: 1.7rem;
-      border: none;
+      margin: 0 2rem 4rem 2rem;
       border-radius: 0.8rem;
       padding: 1.2rem 2.2rem;
-      color: #fff;
-      cursor: pointer;
       transition: transform 0.2s, box-shadow 0.2s;
 
       &:hover {
