--- a/src/sass/productCard.scss
+++ b/src/sass/productCard.scss
@@ -6,10 +6,11 @@
    background-color: var(--color-grey-light);
    border-radius: 1rem;
    box-shadow: 3.3px 3.3px 5.3px rgba(0, 0, 0, 0.028),
-               11.2px 11.2px 17.9px rgba(0, 0, 0, 0.042),
-               50px 50px 80px rgba(0, 0, 0, 0.07);
+      11.2px 11.2px 17.9px rgba(0, 0, 0, 0.042),
+      50px 50px 80px rgba(0, 0, 0, 0.07);
 
    position: relative;
+   overflow: hidden;
 
    @media only screen and (max-width: 26.875em) {
       grid-template-columns: 1.25rem repeat(2, minmax(min-content, 8.5rem)) 1.25rem;
@@ -54,10 +55,10 @@
       grid-row: 2 / 3;
       justify-self: center;
       border-radius: 0.8rem;
-      transition: transform 0.2s, box-shadow 0.2s;
+      animation: popup 0.3s ease-out;
+      transition: box-shadow 0.2s;
 
       &:hover {
-         transform: translateY(-2px);
          box-shadow: 0 0.8rem 1rem rgba(#000, 0.15);
       }
    }
@@ -76,5 +77,15 @@
       right: 2rem;
       background-color: var(--color-grey-light);
       box-shadow: 0 5px 8px rgba(#000, 0.1);
+   }
+}
+
+@keyframes popup {
+   0% {
+      transform: translateY(8rem);
+   }
+
+   100% {
+      transform: translateY(0);
    }
 }
