--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -5,7 +5,7 @@
    justify-content: center;
 
    background-color: var(--color-grey-dark);
-   
+
    @media only screen and (max-width: 63.5em) {
       background-color: #fff;
    }
@@ -21,7 +21,7 @@
    padding: 7rem;
    background-color: #fff;
    border-radius: 3px;
-   box-shadow: 0 5px 5px rgba(#000, 0.2);
+   box-shadow: 2rem 8rem 8rem rgba(#3f51b5, 0.2);
 
    position: relative;
 
@@ -40,13 +40,15 @@
 
    &__title {
       grid-column: 1 / 4;
+      letter-spacing: -1px;
+      font-size: 2.5rem;
 
       @media only screen and (max-width: 50em) {
          grid-column: 1 / -1;
          grid-row: 1 / 2;
       }
    }
-   
+
    &__form {
       grid-column: 1 / 4;
       grid-row: 2 / -1;
@@ -66,12 +68,14 @@
       display: block;
       font-weight: 500;
       margin-bottom: 1rem;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
+      letter-spacing: -0.5px;
    }
 
    &__input {
+      width: 80%;
       font-size: 1.6rem;
-      padding: 1rem 2rem;
+      padding: 1.5rem 2rem;
       border: none;
       border-radius: 0.5rem;
       background-color: var(--color-grey-dark);
@@ -89,7 +93,7 @@
    &__submit {
       justify-self: start;
       font-size: 1.7rem;
-      padding: 0.8rem 2.4rem;
+      padding: 1.25rem 2.4rem;
       transition: transform 0.2s, box-shadow 0.2s;
 
       &:hover {
@@ -118,17 +122,19 @@
       font-weight: 500;
       padding-left: 20px;
    }
-   
+
    &__logo {
+      font-family: 'Sofia Pro', 'Mukta', sans-serif;
       display: inline-block;
       font-size: 2rem;
       font-weight: 600;
       margin-left: 3rem;
       color: var(--color-text);
+      letter-spacing: -0.5px;
       position: absolute;
       top: 4rem;
       right: 7rem;
-      
+
       @media only screen and (max-width: 50em) {
          top: 1rem;
       }
@@ -136,7 +142,8 @@
       @media only screen and (max-width: 31.25em) {
          right: 2.5rem;
       }
-      
+
+      /*
       &::before,
       &::after {
          display: inline-block;
@@ -156,5 +163,6 @@
          width: 3rem;
          top: 0.5rem;
       }
+      */
    }
 }
