--- a/src/sass/sidebar.scss
+++ b/src/sass/sidebar.scss
@@ -1,10 +1,14 @@
 .sidebar {
-   background-color: var(--color-sidebar);
-   min-height: calc(100vh - 6.2rem);
+   /* background-color: var(--color-sidebar);
+   background-color: #3f51b5;
+   min-height: calc(100vh - 6.2rem); */
+   background-color: #2a3781;
+   min-height: 60rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
-   
+   border-bottom-left-radius: 5px;
+
    @media only screen and (max-width: 63.5em) {
       min-height: 5rem;
       flex-direction: row;
@@ -18,7 +22,7 @@
    list-style: none;
    display: flex;
    flex-direction: column;
-   
+
    @media only screen and (max-width: 63.5em) {
       margin: 0;
       flex-direction: row;
@@ -40,19 +44,41 @@
             margin: 0;
          }
       }
+
+      &--active {
+         background-color: transparent;
+
+         @media only screen and (max-width: 63.5em) {
+            background-color: rgba(#fff, 0.2);
+         }
+
+         &::before {
+            display: inline-block;
+            content: '';
+            position: absolute;
+            top: 10%;
+            left: 0;
+            height: 80%;
+            width: 4px;
+            background-color: #fff;
+
+            @media only screen and (max-width: 63.5em) {
+               display: none;
+            }
+         }
+      }
    }
-   
+
    &__link:link,
    &__link:visited {
       display: block;
       padding: 1rem 2rem;
       text-decoration: none;
-      text-transform: uppercase;
       color: #fff;
-      transition: background-color 0.2s;
-      
+      transition: background-color 0.2s, transform 0.2s;
+
       @media only screen and (max-width: 63.5em) {
-         padding: 0.7rem 2rem;
+         padding: 0.7rem 1.5rem;
          border-radius: 0.5rem;
       }
 
@@ -64,16 +90,27 @@
 
    &__link:hover,
    &__link:active {
+      color: #000;
+      transform: translateX(3px);
+
+      @media only screen and (max-width: 63.5em) {
+         background-color: rgba(#fff, 0.2);
+      }
+   }
+
+   /*
+   &__link:hover,
+   &__link:active {
       background-color: rgba(#fff, 0.1);
    }
+   */
 }
-
 
 .copyright {
    font-size: 1.2rem;
    padding: 2rem;
    text-align: center;
-   color: #bbb;
+   color: #000;
 
    @media only screen and (max-width: 63.5em) {
       display: none;
@@ -86,5 +123,20 @@
 
    &__link:hover {
       color: #bbb;
+   }
+}
+
+
+.settings__copy {
+   display: inline-block;
+   padding: 0;
+   text-align: start;
+   position: absolute;
+   bottom: 5%;
+   left: 50%;
+   transform: translateX(-50%);
+
+   & a {
+      color: #000;
    }
 }
